--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"autoprefixer": "^10.4.13",
 		"sk-lanyard": "^0.1.7",
+		"svelte-lanyard": "^1.0.2",
 		"tailwindcss": "^3.2.7"
 	}
 }
